--- a/common/package.json
+++ b/common/package.json
@@ -1,7 +1,18 @@
 {
   "name": "@chm-tickets/common",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
+  "files": [
+    "build/**/*"
+  ],
   "license": "MIT",
-  "scripts": {}
+  "scripts": {
+    "build": "npm run clean && tsc",
+    "clean": "del ./build/*"
+  },
+  "devDependencies": {
+    "del-cli": "^3.0.1",
+    "typescript": "^3.9.5"
+  }
 }
