--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chm-tickets/common",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
@@ -9,7 +9,8 @@
   "license": "MIT",
   "scripts": {
     "build": "npm run clean && tsc",
-    "clean": "del ./build/*"
+    "clean": "del ./build/*",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "del-cli": "^3.0.1",
