--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watchAll --no-cache"
+    "test": "jest --watchAll --no-cache",
+    "build": "tsc"
   },
   "jest": {
     "preset": "ts-jest",
@@ -15,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "@chm-tickets/common": "^1.0.6",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
