--- a/tickets/package.json
+++ b/tickets/package.json
@@ -22,7 +22,8 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.12"
+    "mongoose": "^5.9.12",
+    "mongoose-update-if-current": "^1.4.0"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.39",
