--- a/infra/k8s/expiration-depl.yaml
+++ b/infra/k8s/expiration-depl.yaml
@@ -1,39 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-depl
+  name: expiration-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth
+      app: expiration
   template:
     metadata:
       labels:
-        app: auth
+        app: expiration
     spec:
       containers:
-        - name: auth
-          image: checkmatez/auth
+        - name: expiration
+          image: checkmatez/expiration
           env:
-            - name: MONGO_URI
-              value: 'mongodb://auth-mongo-srv:27017/auth'
-            - name: JWT_KEY
+            - name: NATS_CLIENT_ID
               valueFrom:
-                secretKeyRef:
-                  name: jwt-secret
-                  key: JWT_KEY
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: auth-srv
-spec:
-  type: ClusterIP
-  selector:
-    app: auth
-  ports:
-    - name: auth
-      protocol: TCP
-      port: 3000
-      targetPort: 3000
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLUSTER_ID
+              value: 'ticketing'
+            - name: REDIS_HOST
+              value: expiration-redis-srv
