--- a/infra/k8s/expiration-redis-depl.yaml
+++ b/infra/k8s/expiration-redis-depl.yaml
@@ -1,28 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: expiration-depl
+  name: expiration-redis-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: expiration
+      app: expiration-redis
   template:
     metadata:
       labels:
-        app: expiration
+        app: expiration-redis
     spec:
       containers:
-        - name: expiration
-          image: checkmatez/expiration
-          env:
-            - name: NATS_CLIENT_ID
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: NATS_URL
-              value: "http://nats-srv:4222"
-            - name: NATS_CLUSTER_ID
-              value: "ticketing"
-            - name: REDIS_HOST
-              value: expiration-redis-srv
+        - name: expiration-redis
+          image: redis
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: expiration-redis-srv
+spec:
+  selector:
+    app: expiration-redis
+  ports:
+    - name: db
+      protocol: TCP
+      port: 6379
+      targetPort: 6379
